last edits on css index and services => fixed wrapping and stretching

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -66,12 +66,18 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 #main{
-	margin: 20px 27%;
+    margin: 0 20%;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: space-evenly;
 }
 
 #navigation-top{
 	display: flex;
 	justify-content: : space-evenly;
+    align-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 #navigation-top a {
@@ -95,6 +101,7 @@ header{
 	justify-content: space-evenly;
 	align-content: space-evenly;
 	align-items: center;
+    flex-wrap: wrap;
 }
 
 #subheaderText{
@@ -105,12 +112,27 @@ header{
 	align-items: center;
 }
 
+#subheaderService{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#serviceHeader{
+    text-align: left;
+}
+
 article section h4{
 	font-family: "Bangers";
 	font-size: 120%;
 }
 article section{
 	margin-bottom: 30px;
+}
+
+article{
+    display: flex;
+    flex-direction: column;
 }
 
 .point{
